added @LIBBEECRYPT@ to myLDADD list

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,7 +30,7 @@ myLDADD = \
 	$(top_builddir)/lib/librpm.la \
 	$(top_builddir)/rpmdb/librpmdb.la \
 	$(top_builddir)/rpmio/librpmio.la \
-	@INTLLIBS@ @LIBMISC@
+	@LIBBEECRYPT@ @INTLLIBS@ @LIBMISC@
 
 rpmbindir = `echo $(bindir) | sed -e s,usr/bin,bin,`
 rpmbin_PROGRAMS = rpm
