--- a/configure.in
+++ b/configure.in
@@ -198,7 +198,6 @@ dnl
 dnl
 dnl Find some common programs
 dnl
-    AC_PATH_PROG(BZIP2BIN, bzip2, /usr/bin/bzip2, $MYPATH)
     AC_PATH_PROG(__CAT, cat, /bin/cat, $MYPATH)
     AC_PATH_PROG(__CHGRP, chgrp, /bin/chgrp, $MYPATH)
     AC_PATH_PROG(__CHMOD, chmod, /bin/chmod, $MYPATH)
@@ -209,6 +208,7 @@ dnl
     AC_PATH_PROG(__GPG, gpg, /usr/bin/gpg, $MYPATH)
     AC_PATH_PROG(__GREP, grep, /bin/grep, $MYPATH)
     AC_PATH_PROG(GZIPBIN, gzip, /bin/gzip, $MYPATH)
+    AC_PATH_PROG(BZIP2BIN, bzip2, /bin/bzip2, $MYPATH)
     AC_PATH_PROG(UNZIPBIN, unzip, /usr/bin/unzip, $MYPATH)
 
     AC_PATH_PROG(__ID, id, /usr/bin/id, $MYPATH)
@@ -224,6 +224,7 @@ dnl XXX Watchout for square brackets fed to m4.
     AC_SUBST(__ID_U)
 
     AC_PATH_PROG(__INSTALL, install, /usr/bin/install, $MYPATH)
+    AC_PATH_PROG(__INSTALL_INFO, install-info, /sbin/install-info, $MYPATH)
     AC_PATH_PROG(__MAKE, make, /usr/bin/make, $MYPATH)
     AC_PATH_PROG(__MKDIR, mkdir, /bin/mkdir, $MYPATH)
     AC_PATH_PROG(__MV, mv, /bin/mv, $MYPATH)
@@ -396,10 +397,14 @@ AC_CHECK_HEADERS(db3/db.h)
 
 dnl Check for Berkeley db3 API.
 AC_CHECK_FUNC(db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"],
-  AC_CHECK_LIB(db-3.2, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.2"],
-    AC_CHECK_LIB(db-3.1, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.1"],
-      AC_CHECK_LIB(db-3.0, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.0"],
-        AC_CHECK_LIB(db, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb"],
+  AC_CHECK_LIB(db-4.0, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-4.0"],
+    AC_CHECK_LIB(db-3.3, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.3"],
+      AC_CHECK_LIB(db-3.2, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.2"],
+        AC_CHECK_LIB(db-3.1, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.1"],
+          AC_CHECK_LIB(db-3.0, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb-3.0"],
+            AC_CHECK_LIB(db, db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"; libdb3="-ldb"],
+            ,$libthread)
+          ,$libthread)
         ,$libthread)
       ,$libthread)
     ,$libthread)
@@ -474,13 +479,17 @@ dnl zlib-1.0.4 has not gzseek
 AC_CHECK_LIB(${zlib}, gzseek, [AC_DEFINE(HAVE_GZSEEK)])
 fi
 
-AC_CHECK_LIB(bz2, bzread, [LIBS="$LIBS -lbz2"], 
-   AC_CHECK_LIB(bz2, BZ2_bzread, [
-     WITH_BZIP2=1
-     LIBS="$LIBS -lbz2"
-     AC_DEFINE(HAVE_BZ2_1_0) ], 
-     WITH_BZIP2=0))
+AC_CHECK_LIB(bz2, BZ2_bzread, [
+	WITH_BZIP2=1
+	LIBS="$LIBS -lbz2"
+	AC_DEFINE(HAVE_BZ2_1_0) ], 
+	AC_CHECK_LIB(bz2, bzread, [
+		WITH_BZIP2=1
+		LIBS="$LIBS -lbz2" ], 
+		WITH_BZIP2=0))
 AC_SUBST(WITH_BZIP2)
+
+AC_CHECK_LIB(popt, poptGetContext, [LIBS="$LIBS -lpopt"])
 
 dnl Red Hat 4.x has not personality
 AC_CHECK_FUNCS(personality)
