db4/db.h tricks

--- a/configure.in
+++ b/configure.in
@@ -394,6 +394,7 @@ if test $withval = no ; then
 dnl ------------------ without internal db
 
 AC_CHECK_HEADERS(db3/db.h)
+AC_CHECK_HEADERS(db4/db.h)
 
 dnl Check for Berkeley db3 API.
 AC_CHECK_FUNC(db_create, [DBLIBSRCS="$DBLIBSRCS db3.c"],
