--- a/rpmpopt.in
+++ b/rpmpopt.in
@@ -185,7 +185,13 @@ rpm	alias --with		--define "_with_!#:+       --with-!#:+" \
 rpm	alias --without		--define "_without_!#:+    --without-!#:+" \
 	--POPTdesc=$"disable configure <option> for build" \
 	--POPTargs=$"<option>"
-	
+rpm	alias --enable		--define "_enable_!#:+     --enable-!#:+" \
+	--POPTdesc=$"enable configure <option> for build" \
+	--POPTargs=$"<option>"
+rpm	alias --disable		--define "_disable_!#:+    --disable-!#:+" \
+	--POPTdesc=$"disable configure <option> for build" \
+	--POPTargs=$"<option>"
+
 rpm	alias -C --clean --rmsource --rmspec
 rpm	alias --vendor --eval %vendor
 rpm	alias --packager --eval %packager
@@ -205,6 +211,12 @@ rpmb	alias --with		--define "_with_!#:+       --with-!#:+" \
 rpmb	alias --without		--define "_without_!#:+    --without-!#:+" \
 	--POPTdesc=$"disable configure <option> for build" \
 	--POPTargs=$"<option>"
+rpmb	alias --enable		--define "_enable_!#:+     --enable-!#:+" \
+	--POPTdesc=$"enable configure <option> for build" \
+	--POPTargs=$"<option>"
+rpmb	alias --disable		--define "_disable_!#:+    --disable-!#:+" \
+	--POPTdesc=$"disable configure <option> for build" \
+	--POPTargs=$"<option>"
 rpmb	alias -C --clean --rmsource --rmspec
 #==============================================================================
 rpmbuild	alias --dbpath		--define '_dbpath !#:+' \
@@ -219,6 +231,12 @@ rpmbuild alias --with		--define "_with_!#:+     --with-!#:+" \
 	--POPTdesc=$"enable configure <option> for build" \
 	--POPTargs=$"<option>"
 rpmbuild alias --without	--define "_without_!#:+  --without-!#:+" \
+	--POPTdesc=$"disable configure <option> for build" \
+	--POPTargs=$"<option>"
+rpmbuild alias --enable		--define "_enable_!#:+   --enable-!#:+" \
+	--POPTdesc=$"enable configure <option> for build" \
+	--POPTargs=$"<option>"
+rpmbuild alias --disable	--define "_disable_!#:+  --disable-!#:+" \
 	--POPTdesc=$"disable configure <option> for build" \
 	--POPTargs=$"<option>"
 #==============================================================================
