--- a/configure.in
+++ b/configure.in
@@ -829,11 +829,10 @@ withval=auto
 AC_ARG_WITH(python, [  --with-python           build rpm python bindings ])
 
 WITH_PYTHON_VERSION=
-if test -n "$withval" -a "$withval" != auto; then
-   WITH_PYTHON_VERSION=$withval
-fi
-if test -z "$withval" -o test $withval = auto ; then
+if test "$withval" = yes -o "$withval" = auto; then
   WITH_PYTHON_VERSION=$(python -c 'import sys; print sys.version' |head -1 |cut -d' ' -f1 |cut -d. -f1,2)
+elif test "$withval" != no; then
+  WITH_PYTHON_VERSION=$withval
 fi
 
 if test -n "$WITH_PYTHON_VERSION" ; then
