--- a/rpmpopt.in
+++ b/rpmpopt.in
@@ -143,6 +143,7 @@ rpm	exec --bl		rpmb -bl
 rpm	exec --ba		rpmb -ba
 rpm	exec --bb		rpmb -bb
 rpm	exec --bs		rpmb -bs
+rpm	exec --bE		rpmb -bE
 rpm	exec --tp		rpmb -tp
 rpm	exec --tc		rpmb -tc
 rpm	exec --ti		rpmb -ti
