--- a/autodeps/linux.prov.in
+++ b/autodeps/linux.prov.in
@@ -143,7 +143,7 @@ FindLibProvs()
 	    		echo -E "$d" | awk "-vsoname=$soname" '
 					BEGIN {START=0;}
 					/^Version definitions:$/ {START=1;}
-					/^[0-9]/ && (START==1) && ($4!=soname) {printf("%s(%s)\n",soname,$4);}
+					/^[0-9]/ && (START==1) && ($4!="") && ($4!=soname) {printf("%s(%s)\n",soname,$4);}
 					/^$/ { START=0; }
 				'
 			fi
