--- a/scripts/brp-compress.in
+++ b/scripts/brp-compress.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 #
 # brp-compress - compress info and manpages.
-# Copyright (C) 2000, 2001  Dmitry V. Levin <ldv@fandra.org>
+# Copyright (C) 2000-2002  Dmitry V. Levin <ldv@altlinux.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
