--- a/rpmpopt.in
+++ b/rpmpopt.in
@@ -201,6 +201,7 @@ rpm	alias -C --clean --rmsource --rmspec
 rpm	alias --vendor --eval %vendor
 rpm	alias --packager --eval %packager
 rpm	alias --distribution --eval %distribution
+rpm	alias --nowait-lock --define '_wait_for_lock 0'
 #==============================================================================
 rpmb	alias --dbpath		--define '_dbpath !#:+' \
 	--POPTdesc=$"use <dir> as the directory for the database" \
@@ -244,6 +245,7 @@ rpmbuild alias --enable		--define "_enable_!#:+   --enable-!#:+" \
 rpmbuild alias --disable	--define "_disable_!#:+  --disable-!#:+" \
 	--POPTdesc=$"disable configure <option> for build" \
 	--POPTargs=$"<option>"
+rpmbuild	alias -C --clean --rmsource --rmspec
 #==============================================================================
 rpmd	alias --dbpath		--define '_dbpath !#:+' \
 	--POPTdesc=$"use <dir> as the directory for the database" \
@@ -366,6 +368,90 @@ rpmq	alias --filesbypkg -q --qf '[%-25{=NAME} %{FILENAMES}\n]' \
 rpmq	alias --vendor --eval %vendor
 rpmq	alias --packager --eval %packager
 rpmq	alias --distribution --eval %distribution
+rpmq	alias --nowait-lock --define '_wait_for_lock 0'
+#==============================================================================
+rpmquery	alias --dbpath		--define '_dbpath !#:+' \
+	--POPTdesc=$"use <dir> as the directory for the database" \
+	--POPTargs=$"<dir>"
+rpmquery	alias --ftpport		--define '_ftpport !#:+'
+rpmquery	alias --ftpproxy	--define '_ftpproxy !#:+'
+rpmquery	alias --httpport	--define '_httpport !#:+'
+rpmquery	alias --httpproxy	--define '_httpproxy !#:+'
+
+rpmquery	alias --scripts -q --qf '\
+%|PREIN?{preinstall scriptlet\
+%|PREINPROG?{ (through %{PREINPROG})}|:\n%{PREIN}\n}:\
+{%|PREINPROG?{preinstall program: %{PREINPROG}\n}|}|\
+\
+%|POSTIN?{postinstall scriptlet\
+%|POSTINPROG?{ (through %{POSTINPROG})}|:\n%{POSTIN}\n}:\
+{%|POSTINPROG?{postinstall program: %{POSTINPROG}\n}|}|\
+\
+%|PREUN?{preuninstall scriptlet\
+%|PREUNPROG?{ (through %{PREUNPROG})}|:\n%{PREUN}\n}:\
+{%|PREUNPROG?{preuninstall program: %{PREUNPROG}\n}|}|\
+\
+%|POSTUN?{postuninstall scriptlet\
+%|POSTUNPROG?{ (through %{POSTUNPROG})}|:\n%{POSTUN}\n}:\
+{%|POSTUNPROG?{postuninstall program: %{POSTUNPROG}\n}|}|\
+\
+%|VERIFYSCRIPT?{verify scriptlet:\n%{VERIFYSCRIPT}\n}|\
+' \
+	--POPTdesc=$"list install/erase scriptlets from package(s)"
+
+rpmquery	alias --conflicts -q --qf \
+  "[%{CONFLICTNAME} %{CONFLICTFLAGS:depflags} %{CONFLICTVERSION}\n]" \
+	--POPTdesc=$"list capabilities this package conflicts with"
+rpmquery	alias --obsoletes -q --qf \
+  "[%{OBSOLETENAME} %|OBSOLETEFLAGS?{%{OBSOLETEFLAGS:depflags} %{OBSOLETEVERSION}}:{}|\n]" \
+	--POPTdesc=$"list other packages removed by installing this package"
+rpmquery	alias --provides -q --qf \
+  "[%{PROVIDENAME} %|PROVIDEFLAGS?{%{PROVIDEFLAGS:depflags} %{PROVIDEVERSION}}:{}|\n]" \
+	--POPTdesc=$"list capabilities that this package provides"
+
+rpmquery	alias --requires -q --qf \
+  "[%{REQUIRENAME} %{REQUIREFLAGS:depflags} %{REQUIREVERSION}\n]" \
+	--POPTdesc=$"list capabilities required by package(s)"
+rpmquery	alias -R --requires
+
+rpmquery	alias --info -q --qf 'Name        : %-27{NAME}  Relocations: %|PREFIXES?{[%{PREFIXES} ]}:{(not relocateable)}|\n\
+Version     : %-27{VERSION}       Vendor: %{VENDOR}\n\
+Release     : %-27{RELEASE}   Build Date: %{BUILDTIME:date}\n\
+Install date: %|INSTALLTIME?{%-27{INSTALLTIME:date}}:{(not installed)         }|      Build Host: %{BUILDHOST}\n\
+Group       : %-27{GROUP}   Source RPM: %{SOURCERPM}\n\
+Size        : %-27{SIZE}%|LICENSE?{      License: %{LICENSE}}|\n\
+%|PACKAGER?{Packager    : %{PACKAGER}\n}|\
+%|URL?{URL         : %{URL}\n}|\
+Summary     : %{SUMMARY}\n\
+Description :\n%{DESCRIPTION}\n' \
+	--POPTdesc=$"list descriptive information from package(s)"
+
+rpmquery	alias --changelog -q --qf '[* %{CHANGELOGTIME:day} %{CHANGELOGNAME}\n\n%{CHANGELOGTEXT}\n\n]' \
+	--POPTdesc=$"list change logs for this package"
+rpmquery	alias --lastchange -q --qf '* %{CHANGELOGTIME:day} %{CHANGELOGNAME}\n\n%{CHANGELOGTEXT}\n' \
+	--POPTdesc=$"output last changelog entry for this package"
+rpmquery	alias --changes-since -q --qf '[%{CHANGELOGNAME:nothing}\
+%|%{CHANGELOGNAME}>!#:+?{* %{CHANGELOGTIME:day} %{CHANGELOGNAME}\n\n%{CHANGELOGTEXT}\n\n}:{}|]' \
+	--POPTdesc=$"list change logs for this package that are fresher than <e:ver-rel> (as indicated by the word next to the packager's email)" \
+	--POPTargs=$"<option>"
+
+rpmquery	alias --triggerscripts -q --qf '\
+[trigger%{TRIGGERTYPE} script (through %{TRIGGERSCRIPTPROG}) -- %{TRIGGERCONDS}\n\
+%{TRIGGERSCRIPTS}\n]'
+rpmquery	alias --triggers --triggerscripts \
+	--POPTdesc=$"list trigger scriptlets from package(s)"
+
+rpmquery	alias --last -q --qf '%|INSTALLTIME?{%{INSTALLTIME}}:{000000000}| %{NAME}-%{VERSION}-%{RELEASE} %|INSTALLTIME?{%{INSTALLTIME:date}}:{(not installed)}|\n' \
+	--pipe "sort -r -n | sed 's,^[0-9]\+ ,,' | awk '{printf(\"%-45s %-s\n\", $1, substr($0,length($1)+2))}' " \
+	--POPTdesc=$"list package(s) by install time, most recent first"
+
+rpmquery	alias --filesbypkg -q --qf '[%-25{=NAME} %{FILENAMES}\n]' \
+	--POPTdesc=$"list all files from each package"
+
+rpmquery	alias --vendor --eval %vendor
+rpmquery	alias --packager --eval %packager
+rpmquery	alias --distribution --eval %distribution
+rpmquery	alias --nowait-lock --define '_wait_for_lock 0'
 #==============================================================================
 rpmu	alias --dbpath		--define '_dbpath !#:+' \
 	--POPTdesc=$"use <dir> as the directory for the database" \
