filter parameter values

--- a/scripts/brp-compress.in
+++ b/scripts/brp-compress.in
@@ -20,6 +20,8 @@
 
 PROG="${0##*/}"
 
+RPM_COMPRESS_METHOD="${RPM_COMPRESS_METHOD## }"
+RPM_COMPRESS_METHOD="${RPM_COMPRESS_METHOD%% }"
 echo "Compressing files in $RPM_BUILD_ROOT ($RPM_COMPRESS_METHOD)"
 
 if [ "$RPM_COMPRESS_METHOD" = skip ]; then
