%___build_pre: %__mkdir_p %{u2p:%_builddir} before chdir there.

--- a/macros.in
+++ b/macros.in
@@ -620,6 +620,7 @@
   %{?__ccache_dir:export CCACHE_DIR=\"%__ccache_dir\"}\
   %{verbose:set -x}%{!verbose:exec > /dev/null}\
   umask 022\
+  %__mkdir_p %{u2p:%_builddir}\
   cd %{u2p:%_builddir}\
 
 
