--- a/platform.in
+++ b/platform.in
@@ -355,7 +355,7 @@
 @alt@
 @alt@%_cleanup_method	auto
 @alt@%_compress_method	auto
-@alt@%_strip_method	executable shared
+@alt@%_strip_method	%{?_enable_debug:none}%{!?_enable_debug:executable shared}
 @alt@%_findreq_default_method	files lib pam perl shell
 @alt@%_findprov_default_method	pam lib perl
 @alt@
