--- a/autodeps/linux.req.in
+++ b/autodeps/linux.req.in
@@ -205,6 +205,12 @@ FindExeReqs()
 	fi
 }
 
+if [ -n "$RPM_SUBPACKAGE_NAME" ]; then
+	if [ -n "${RPM_SUBPACKAGE_NAME%%glibc*}" -a -z "${RPM_SUBPACKAGE_NAME##*-devel-static}" ]; then
+		FOUND_REQS=glibc-devel-static
+	fi
+fi
+
 while IFS= read -r f; do
 	if [ -n "$FIND_FILES" ]; then
 		if [ -z "${f%%$RPM_BUILD_ROOT/etc/xinetd.d/*}" ]; then
