define STRIP_AUTOSKIP='*/debug/*' for argless execution

--- a/scripts/brp-strip.in
+++ b/scripts/brp-strip.in
@@ -237,7 +237,7 @@ else
 		exit 1
 	fi
 
-	[ -n "$STRIP_AUTOSKIP" ] || STRIP_AUTOSKIP=debug
+	[ -n "$STRIP_AUTOSKIP" ] || STRIP_AUTOSKIP='*/debug/*'
 
 	StripTree "$TOPDIR"
 fi
