set %_configure_target to "--build=%{_target_platform}"

--- a/platform.in
+++ b/platform.in
@@ -36,7 +36,7 @@
 # ---- configure and makeinstall.
 #
 %_configure_script	./configure
-%_configure_target	%{_target_platform}
+%_configure_target	--build=%{_target_platform}
 %_configure_gettext	--without-included-gettext
 %configure \
   CFLAGS="${CFLAGS:-%optflags}" ; export CFLAGS ; \
