--- a/scripts/brp-verify_elf.in
+++ b/scripts/brp-verify_elf.in
@@ -1,10 +1,8 @@
 #!/bin/sh -e
 #
-# brp-alt
-# The ALT Linux build root policies invoked
-# at the end of the %install scriptlet.
+# brp-verify_elf - verify ELF objects.
 #
-# Copyright (C) 2000  Dmitry V. Levin <ldv@fandra.org>
+# Copyright (C) 2002  Dmitry V. Levin <ldv@altlinux.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -31,23 +29,15 @@ fi
 
 cd "$RPM_BUILD_ROOT"
 
-# Cleanup files.
-@RPMCONFIGDIR@/brp-cleanup
+RPM_VERIFY_ELF_METHOD="${RPM_VERIFY_ELF_METHOD## }"
+RPM_VERIFY_ELF_METHOD="${RPM_VERIFY_ELF_METHOD%% }"
 
-# Fix file permissions.
-@RPMCONFIGDIR@/brp-fix-perms
+echo "Verifying ELF objects in $RPM_BUILD_ROOT ($RPM_VERIFY_ELF_METHOD)"
 
-# Compress info and man pages.
-@RPMCONFIGDIR@/brp-compress
+case "$RPM_VERIFY_ELF_METHOD" in
+	none|skip)
+		exit 0
+		;;
+esac
 
-# Verify ELF objects.
-@RPMCONFIGDIR@/brp-verify_elf
-
-# Strip ELF binaries.
-@RPMCONFIGDIR@/brp-strip
-
-# Adjust library links.
-@RPMCONFIGDIR@/brp-adjust_libraries
- 
-# Re-bytecompile python modules.
-@RPMCONFIGDIR@/brp-bytecompile_python
+find -type f -print0 |xargs -r0 @RPMCONFIGDIR@/verify-elf
