--- a/macros.in
+++ b/macros.in
@@ -600,6 +600,7 @@
   %{?_cleanup_method:export RPM_CLEANUP_METHOD=\"%_cleanup_method\"}\
   %{?_compress_method:export RPM_COMPRESS_METHOD=\"%_compress_method\"}\
   %{?_strip_method:export RPM_STRIP_METHOD=\"%_strip_method\"}\
+  %{?_strip_autoskip:export RPM_STRIP_AUTOSKIP=\"%_strip_autoskip\"}\
   %{?_verify_elf_method:export RPM_VERIFY_ELF_METHOD=\"%_verify_elf_method\"}\
   %{?_findreq_method:export RPM_FINDREQ_METHOD=\"%_findreq_method\"}\
   %{?_findprov_method:export RPM_FINDPROV_METHOD=\"%_findprov_method\"}\
