--- a/platform.in
+++ b/platform.in
@@ -357,11 +357,13 @@
 @alt@%_compress_method	auto
 @alt@%_verify_elf_method	normal
 @alt@%_strip_method	%{?_enable_debug:none}%{!?_enable_debug:executable shared}
+@alt@%_strip_autoskip	*/debug/*
 @alt@%_findreq_default_method	files lib pam perl shell
 @alt@%_findprov_default_method	pam lib perl
 @alt@
 @alt@%set_compress_method()	%global _compress_method %*
 @alt@%set_strip_method()	%global _strip_method %*
+@alt@%set_strip_autoskip()	%global _strip_autoskip %*
 @alt@%set_verify_elf_method()	%global _verify_elf_method %*
 @alt@
 @alt@%strip_executable	RPM_STRIP_METHOD=executable @RPMCONFIGDIR@/brp-strip
