--- a/autodeps/linux.req.in
+++ b/autodeps/linux.req.in
@@ -211,7 +211,20 @@ if [ -n "$RPM_SUBPACKAGE_NAME" ]; then
 	fi
 fi
 
+: ${RPM_FINDREQ_TOPDIR:=}
+: ${RPM_FINDREQ_SKIPLIST:=}
+
 while IFS= read -r f; do
+	if [ -n "$RPM_FINDREQ_TOPDIR" ] && [ -z "${f%%$RPM_BUILD_ROOT$RPM_FINDREQ_TOPDIR/*}" ]; then
+		continue;
+	fi
+	if [ -n "$RPM_FINDREQ_SKIPLIST" ]; then
+		for skip in $RPM_FINDREQ_SKIPLIST; do
+			if [ -z "${f//$skip}" ]; then
+				continue 2
+			fi
+		done
+	fi
 	if [ -n "$FIND_FILES" ]; then
 		for p in \
 			/etc/chroot.d \
