--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -4,11 +4,12 @@ AUTOMAKE_OPTIONS = 1.4 foreign
 
 EXTRA_DIST = \
 	brp-adjust_libraries brp-alt brp-bytecompile_python \
-	brp-cleanup brp-compress brp-fix-perms brp-strip brp-verify_elf \
+	brp-cleanup brp-compress brp-fix-perms brp-fixup brp-strip brp-verify_elf \
 	compress_files check-prereqs convertrpmrc.sh cross-build \
 	delayed_rebuilddb find-lang find-package find-prov.pl find-req.pl \
-	cpanflute cpanflute2 Specfile.pm find-provides.perl \
-	find-requires.perl get_magic.pl getpo.sh http.req \
+	cpanflute cpanflute2 Specfile.pm find-provides.perl find-requires.perl \
+	fixup-binconfig fixup-pkgconfig fixup-libtool \
+	get_magic.pl getpo.sh http.req \
 	magic.prov magic.req pam.prov pam.req perl.prov perl.req rpmdiff rpmdiff.cgi \
 	rpm.daily rpm.log rpm.xinetd rpm2cpio.sh \
 	shell.req sql.prov sql.req strip_files tcl.req trpm u_pkg.sh \
@@ -21,11 +22,12 @@ all:
 configdir = ${prefix}/lib/rpm
 config_SCRIPTS = \
 	brp-adjust_libraries brp-alt brp-bytecompile_python \
-	brp-cleanup brp-compress brp-fix-perms brp-strip brp-verify_elf \
+	brp-cleanup brp-compress brp-fix-perms brp-fixup brp-strip brp-verify_elf \
 	compress_files check-prereqs convertrpmrc.sh cross-build \
 	delayed_rebuilddb find-lang find-package find-prov.pl find-req.pl \
-	cpanflute cpanflute2 Specfile.pm find-provides.perl \
-	find-requires.perl get_magic.pl getpo.sh http.req \
+	cpanflute cpanflute2 Specfile.pm find-provides.perl find-requires.perl \
+	fixup-binconfig fixup-pkgconfig fixup-libtool \
+	get_magic.pl getpo.sh http.req \
 	magic.prov magic.req pam.prov pam.req perl.prov perl.req rpmdiff rpmdiff.cgi \
 	rpm.daily rpm.log rpm.xinetd rpm2cpio.sh \
 	shell.req sql.prov sql.req strip_files tcl.req trpm u_pkg.sh \
