--- a/autodeps/linux.req.in
+++ b/autodeps/linux.req.in
@@ -1,9 +1,9 @@
-#!/bin/sh -e
+#!/bin/sh -e -f +B
 #
 # find-requires - generate list of linux-specific package requires.
 # Inspired by tool with same name from RPM distribution.
 #
-# Copyright (C) 2000  Dmitry V. Levin <ldv@fandra.org>
+# Copyright (C) 2000,2001,2002  Dmitry V. Levin <ldv@altlinux.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
