fixed skiplists processing again

--- a/autodeps/linux.prov.in
+++ b/autodeps/linux.prov.in
@@ -1,4 +1,4 @@
-#!/bin/sh -e -f +B
+#!/bin/sh -ef
 #
 # find-provides - generate list of linux-specific package provides.
 # Inspired by tool with same name from RPM distribution.
