--- a/autodeps/linux.req.in
+++ b/autodeps/linux.req.in
@@ -1,4 +1,4 @@
-#!/bin/sh -e -f +B
+#!/bin/sh -ef
 #
 # find-requires - generate list of linux-specific package requires.
 # Inspired by tool with same name from RPM distribution.
